@@ -3,7 +3,6 @@ package practice;
 import java.util.Arrays;
 import java.util.List;
 import java.util.NoSuchElementException;
-import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 import model.Candidate;
 import model.Cat;
@@ -19,11 +18,10 @@ public class StreamPractice {
      */
     public int findMinEvenNumber(List<String> numbers) {
         return numbers.stream()
-                .map(s -> s.split(","))
-                .flatMap(Arrays::stream)
+                .flatMap(stringOfNumbers -> Arrays.stream( stringOfNumbers.split(",")))
                 .map(Integer::parseInt)
-                .mapToInt(i -> i)
-                .filter(n -> n % 2 == 0)
+                .mapToInt(item -> item)
+                .filter(number -> number % 2 == 0)
                 .min()
                 .orElseThrow(() -> new RuntimeException(
                         "Can't get min value from list: " + numbers
@@ -38,9 +36,9 @@ public class StreamPractice {
      */
     public Double getOddNumbersAverage(List<Integer> numbers) {
         return IntStream.range(0, numbers.size())
-                .map(i -> i % 2 != 0 ? numbers.get(i) - 1 : numbers.get(i))
-                .filter(n -> n % 2 > 0)
-                .mapToDouble(i -> i)
+                .map(index -> index % 2 != 0 ? numbers.get(index) - 1 : numbers.get(index))
+                .filter(number -> number % 2 > 0)
+                .mapToDouble(item -> item)
                 .average()
                 .orElseThrow(NoSuchElementException::new);
     }
@@ -55,10 +53,10 @@ public class StreamPractice {
      */
     public List<Person> selectMenByAge(List<Person> peopleList, int fromAge, int toAge) {
         return peopleList.stream()
-                .filter(p -> p.getAge() >= fromAge
-                        && p.getAge() <= toAge
-                        && p.getSex() == Person.Sex.MAN)
-                .collect(Collectors.toList());
+                .filter(person -> person.getAge() >= fromAge
+                        && person.getAge() <= toAge
+                        && person.getSex() == Person.Sex.MAN)
+                .toList();
     }
 
     /**
@@ -74,13 +72,13 @@ public class StreamPractice {
     public List<Person> getWorkablePeople(int fromAge, int femaleToAge,
                                           int maleToAge, List<Person> peopleList) {
         return peopleList.stream()
-                .filter(p -> (p.getAge() >= fromAge
-                        && p.getAge() <= maleToAge
-                        && p.getSex() == Person.Sex.MAN)
-                        || (p.getSex() == Person.Sex.WOMAN
-                        && p.getAge() >= fromAge
-                        && p.getAge() <= femaleToAge))
-                .collect(Collectors.toList());
+                .filter(person -> (person.getAge() >= fromAge
+                        && person.getAge() <= maleToAge
+                        && person.getSex() == Person.Sex.MAN)
+                        || (person.getSex() == Person.Sex.WOMAN
+                        && person.getAge() >= fromAge
+                        && person.getAge() <= femaleToAge))
+                .toList();
     }
 
     /**
@@ -90,8 +88,8 @@ public class StreamPractice {
      */
     public List<String> getCatsNames(List<Person> peopleList, int femaleAge) {
         return peopleList.stream()
-                .filter(p -> p.getSex() == Person.Sex.WOMAN && p.getAge() >= femaleAge)
-                .flatMap(p -> p.getCats()
+                .filter(person -> person.getSex() == Person.Sex.WOMAN && person.getAge() >= femaleAge)
+                .flatMap(filteredPerson -> filteredPerson.getCats()
                         .stream()
                         .map(Cat::getName))
                 .toList();
